----------
v7.0.0-git
----------

[mms] Auto-detect EAI support on mail backends and provide validation feedback
      without the need to submit to the backend.
[mms] Removed basic view.
[mms] Do autocomplete search on browser, if sufficient data exists, to save
      calls to contacts backend.
[mms] Removed minimal view.
[mms] Allow auto-completed e-mail groups to be expanded on the dynamic compose
      page.
[mms] Add class of message part rendering display errors that aren't show to
      the user by default.
[mms] Throttle message list keypresses in dynamic view to prevent avalanche of
      preview requests sent to server (Request #13574).
[mms] Filter out relative image URLs in HTML message data.
[mms] Implement lazy loading for images in HTML messages.
[mms] Add 'dynamic_prefs' hook to allow for changing of default values for
      browser-based preferences in dynamic view.
[mms] Removed compose 'use_vfs' configuration option.
[mjr] Add IMP_Api::addFlags().
[mms] Allow multiple independent attachment actions on the dynamic compose
      screen.
[mms] Add upload progress bar in dynamic compose screen when adding
      attachments.
[mms] Uniquely identify sent-mail mailboxes by identity in main folder tree
      (Request #12721).
[mms] Don't send empty text part if a message contains attachments.
[mms] Add button to allow folder tree to be rebuilt in smartmobile view.
[mms] Add option to poll mailbox for new mailbox when creating a mailbox
      (Request #13227).


------
v6.2.3
------

[mms] Fix handling authentication errors when they take place during an attempt
      to determine a mailbox's namespace.
[mms] Fix some folder display issues when not using IMAP subscriptions in
      dynamic view (Bug #13553).
[mms] Fix accessing dynamic compose page when file uploads are not available
      (Bug #13580).
[mms] Fix saving unique browser preferences for a specific backend in dynamic
      view.