@@ -1,32 +1,0 @@
-<?php
-/**
- * Copyright 2014 Horde LLC (http://www.horde.org/)
- *
- * See the enclosed file COPYING for license information (GPL). If you
- * did not receive this file, see http://www.horde.org/licenses/gpl.
- *
- * @category  Horde
- * @copyright 2014 Horde LLC
- * @license   http://www.horde.org/licenses/gpl GPL
- * @package   IMP
- */
-
-/**
- * Iterator filter for IMP_Ftree that allows filtering of invisible elements.
- *
- * @author    Michael Slusarz <slusarz@horde.org>
- * @category  Horde
- * @copyright 2014 Horde LLC
- * @license   http://www.horde.org/licenses/gpl GPL
- * @package   IMP
- */
-class IMP_Ftree_IteratorFilter_Invisible extends FilterIterator
-{
-    /**
-     */
-    public function accept()
-    {
-        return !$this->current()->invisible;
-    }
-
-}
